# set10108_sarahbalboa

./: .gitignore  README.md
labs/: BuildInstructions.txt
labs/cw1/: CMakeLists.txt  main-serial-chrono.cpp  main.cpp
labs/cw1Cuda/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main-cuda-optimised1.cu  main-cuda-optimised2.cu  main-cuda-unoptimised.cu  main-cuda-unoptimized.cu  main-cuda-unoptimized.vcxproj  main-cuda-unoptimized.vcxproj.filters  set10108-cw1Cuda.sln
labs/cw1Cuda/CMakeFiles (2)/: TargetDirectories.txt  generate.stamp.list
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/: CMakeCUDACompiler.cmake
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/CompilerIdCUDA/: CompilerIdCUDA.exp
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/CompilerIdCUDA/Debug/: CMakeCUDACompilerId.cu296312911.deps
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/CompilerIdCUDA/Debug/CompilerIdCUDA.tlog/: CompilerIdCUDA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/CompilerIdCXX/Debug/: CompilerIdCXX.exe.recipe
labs/cw1Cuda/CMakeFiles (2)/3.27.2-msvc1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
labs/cw1_original/: main.cpp
labs/cw1_serialBuild/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cw1.vcxproj  cw1.vcxproj.filters  set10108-cw1.sln
labs/cwBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  set10108-cw1.sln  (+7 more)
(+71 files in other folders)
